<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:visible="false" />
        <item
            android:id="@+id/nav_yourtrips"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_earnings"
            android:title="@string/earnings" />
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>

</menu>
