<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.tranxitpro.provider.Utilities.MyTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/i_need_to_create_an_account"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/_14sdp" />

            <com.tranxitpro.provider.Utilities.MyTextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/i_forgot_my_password"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/nextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon" />

        <com.tranxitpro.provider.Utilities.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome_back"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:ignore="RtlHardcoded">

            <com.tranxitpro.provider.Utilities.MyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionDone"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:textSize="@dimen/_14sdp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


</FrameLayout>
