<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backArrow"
            android:src="@drawable/back_white"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:padding="5dp"/>

        <com.tranxitpro.provider.Utilities.MyBoldTextView
            android:text="@string/wallet"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/money"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginTop="50dp"/>

        <com.tranxitpro.provider.Utilities.MyTextView
            android:text="@string/your_wallet_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />

        <com.tranxitpro.provider.Utilities.MyTextView
            android:id="@+id/walletAmt"
            android:text="@string/sample_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            />
    </LinearLayout>

</LinearLayout>

