<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/backArrow"
            android:src="@drawable/back_white"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <com.tranxitpro.provider.Utilities.MyBoldTextView
            android:text="@string/edit_profile"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_dummy_user"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="#FFFFFF"/>

        <View
            android:id="@+id/line_devider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.tranxitpro.provider.Utilities.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/first_name"/>


                <com.tranxitpro.provider.Utilities.MyEditText
                        android:id="@+id/first_name"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:maxLines="1" />

            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.tranxitpro.provider.Utilities.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/last_name"/>


                <com.tranxitpro.provider.Utilities.MyEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:inputType="text|textCapSentences"
                        android:imeOptions="actionDone"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:maxLines="1" />


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.tranxitpro.provider.Utilities.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/phone_number"/>


            <com.tranxitpro.provider.Utilities.MyEditText
                    android:id="@+id/mobile_no"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:imeOptions="actionDone"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:maxLines="1" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.tranxitpro.provider.Utilities.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/email"/>

            <com.tranxitpro.provider.Utilities.MyEditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:imeOptions="actionNext"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:enabled="false"
                    android:maxLines="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.tranxitpro.provider.Utilities.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/service" />

            <com.tranxitpro.provider.Utilities.MyEditText
                android:id="@+id/service"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:imeOptions="actionNext"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:enabled="false"
                android:maxLines="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <com.tranxitpro.provider.Utilities.MyButton
            android:id="@+id/saveBTN"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            />

        <com.tranxitpro.provider.Utilities.MyTextView
            android:id="@+id/changePasswordTxt"
            android:text="@string/change_password"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
    </ScrollView>

</LinearLayout>
