<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/back_icon"/>

        <com.tranxitpro.provider.Utilities.MyBoldTextView
            android:text="@string/whats_your_mail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16sdp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:ignore="RtlHardcoded">

            <com.tranxitpro.provider.Utilities.MyEditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionDone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical">

            <com.tranxitpro.provider.Utilities.MyTextView
                android:id="@+id/register"
                android:text="@string/i_need_to_create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/holo_blue_light" />

            <com.tranxitpro.provider.Utilities.MyTextView
                android:visibility="gone"
                android:id="@+id/forgetPassword"
                android:text="@string/i_forgot_my_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/holo_blue_light" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/nextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_right"
            android:layout_marginRight="16dp" />

    </LinearLayout>

</RelativeLayout>
